tests/invalid/type/super_outside_method.pts
function main() : void {
    super.clone();
}
